# SampleWrangler

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/: copilot-instructions.md
.github/instructions/: cmake.instructions.md  cpp.instructions.md
.github/prompts/: scaffold-mpv-audio-librarian.prompt.md
REXSDK_Win_1.9.2/: General License Agreement.txt  REX.c  REX.h
REXSDK_Win_1.9.2/REX Test App/: REXTest.c  Wav.c  Wav.h
REXSDK_Win_1.9.2/REX Test Protocol Files/: 120RcyTest.rcy  ErrorLoopLengthNotSet.rcy  PreviewRender_Tempo120000.txt  PreviewRender_Tempo150000.txt  Slice_001.txt  Slice_002.txt  Slice_003.txt  Slice_004.txt  Slice_005.txt  Slice_006.txt  Slice_007.txt  Slice_008.txt  Slice_009.txt  Slice_010.txt
Source/App/: Main.cpp  MainComponent.cpp  MainComponent.h  SampleWranglerIcon.rc
Source/Audio/: AudioEngine.cpp  AudioEngine.h  MidiInputRouter.cpp  MidiInputRouter.h  Voice.h  VoiceManager.cpp  VoiceManager.h
Source/Catalog/: CatalogDb.cpp  CatalogDb.h  CatalogModels.h  CatalogSchema.cpp  CatalogSchema.h  WaveCacheBlobDb.cpp  WaveCacheBlobDb.h
Source/Pipeline/: Analyzer.cpp  Analyzer.h  JobQueue.cpp  JobQueue.h  RexManager.cpp  RexManager.h  Scanner.cpp  Scanner.h  WaveformCache.cpp  WaveformCache.h  WaveformPeak.cpp  WaveformPeak.h
Source/UI/: BrowserPanel.cpp  BrowserPanel.h  PreviewPanel.cpp  PreviewPanel.h  ResultsPanel.cpp  ResultsPanel.h  WaveformPanel.cpp  WaveformPanel.h
Source/Util/: Hashing.cpp  Hashing.h  Logging.h  Paths.cpp  Paths.h
Tests/: CatalogDbTests.cpp  ScannerAppleLoopTests.cpp  WaveformPeakTests.cpp
_CPack_Packages/win64/WIX/: License.rtf  SampleWrangler-0.9.5-win64.wixpdb  SampleWranglerShortcuts.wixobj  cpack_variables.wxi  directories.wixobj  directories.wxs  features.wixobj  features.wxs  files.wixobj  files.wxs  main.wixobj  main.wxs  properties.wxi
_CPack_Packages/win64/WIX/SampleWrangler-0.1.0-win64/lib/cmake/JUCE-8.0.12/: JUCEConfig.cmake
cmake/: CreatePortableZip.cmake.in  LicenseMIT.rtf  RunInnoSetup.cmake.in  SampleWranglerInstaller.iss.in  SampleWranglerShortcuts.wxs  SampleWranglerVersion.rc.in
docs/: ARCHIVE_CHECKLIST.md  DEVSETUP.md
